syntax = "proto3";

package fileservice;

option go_package = ".;pb";

service FileService {
  rpc UploadFile (UploadRequest) returns (UploadResponse);
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
  rpc DownloadFile (DownloadRequest) returns (DownloadResponse);
}

message UploadRequest {
  string filename = 1;
  bytes file_data = 2;
}

message UploadResponse {
  string message = 1;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string name = 1;
  string created_at = 2;
  string updated_at = 3;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes file_data = 1;
}